// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form action prop 1`] = `
"<b-form action=\\"/test\\">
    <form>
        <slot>
            <b-input-text name=\\"A\\" label=\\"A field\\" type=\\"text\\" value=\\"test\\">
                <input type=\\"text\\" name=\\"A\\" value=\\"test\\">
                <b-input-text--border></b-input-text--border>
                <b-input-text--label>A field</b-input-text--label>
            </b-input-text>
            <b-input-text name=\\"B\\" label=\\"B field\\" value=\\"default B value\\" type=\\"text\\">
                <input value=\\"default B value\\" type=\\"text\\" name=\\"B\\">
                <b-input-text--border></b-input-text--border>
                <b-input-text--label>B field</b-input-text--label>
            </b-input-text>
            <b-button color=\\"primary\\">
                <button>
                    <slot>Save</slot>
                </button>
            </b-button>
        </slot>
    </form>
</b-form>"
`;

exports[`Form example 1`] = `
"<b-form action=\\"/examples/form.html\\">
    <form>
        <slot>
            <b-input-text name=\\"A\\" label=\\"A field\\" type=\\"text\\">
                <input type=\\"text\\" name=\\"A\\">
                <b-input-text--border></b-input-text--border>
                <b-input-text--label>A field</b-input-text--label>
            </b-input-text>
            <b-input-text name=\\"B\\" label=\\"B field\\" value=\\"default B value\\" type=\\"text\\">
                <input value=\\"default B value\\" type=\\"text\\" name=\\"B\\">
                <b-input-text--border></b-input-text--border>
                <b-input-text--label>B field</b-input-text--label>
            </b-input-text>
            <b-button color=\\"primary\\">
                <button>
                    <slot>Save</slot>
                </button>
            </b-button>
        </slot>
    </form>
</b-form>"
`;
